# AIPEA

./: .gitignore  .pre-commit-config.yaml  .semgrep.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  SECURITY.md  SPECIFICATION.md  TODO.md  aipea_knowledge.db  coherence-report.md  pyproject.toml
.claude/commands/: audit-deps.md  test-module.md  verify-spec.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bcp-drp-test.yml  change-request.yml  config.yml  incident-response-drill.yml  postmarket-monitoring-review.yml  quarterly-access-review.yml  vendor-risk-assessment.yml
.github/codex/prompts/: second-review.md
.github/scripts/: gpt_review.py
.github/workflows/: adversarial.yml  ai-second-review.yml  ci.yml  codeql-analysis.yml  codeql.yml  compliance-evidence-scheduler.yml  compliance-nightly.yml  dependency-review.yml  publish.yml  scaffold-checks.yml
ai/: AIMS-POLICY.md  data-card.yaml  model-card.yaml  oversight-plan.md  postmarket-monitoring.md  risk-register.yaml  system-register.yaml
ai/technical_file/: README.md  instructions-for-use.md
ai/technical_file/conformity/: README.md  annex-iv-checklist.md
ai/technical_file/logs/: README.md
ai/technical_file/testing/: tev_report_template.md
benchmarks/: perf_baseline.json  run.sh
case-studies/: agora-iv-v1.md
docs/: NEXT_STEPS.md  ROADMAP.md  adopters.md  metrics.md  positioning.md
docs/adr/: ADR-001-extraction.md  ADR-002-fedramp-removal.md  ADR-003-compliance-aware-adaptive-learning.md  ADR-004-taint-aware-feedback-averaging.md  ADR-005-adversarial-evaluation-suite.md  ADR-005-pr52-vc-adversarial-review-response.md  ADR-006-llm-red-team-engine.md  ADR-007-llm-semantic-scan-tier.md  ADR-008-adversarial-evaluation-suite.md  ADR-009-llm-red-team-engine.md  ADR-010-llm-semantic-scan-tier.md  template.md
docs/claude/audits/: ai-second-review-dry-run-2026-04-11.md  aipea.md  investor-review-2026-04-11.md  investor-review-adversarial-2026-04-11.md  review-2026-04-22.md  vc-adversarial-review-2026-04-24.md
docs/compliance/: ACCESS-REVIEW.md  BCP-DRP.md  CHANGE-MANAGEMENT.md  DSR-PRIVACY-OPERATIONS.md  IRP.md  VENDOR-RISK.md  system-description.md
docs/design-reference/: aipea-agent-framework.py  aipea-agora-integration.py  aipea-aws-deployment.txt  aipea-config-management.txt  aipea-enhancement-engine.py  aipea-market-alignment-addendum.md  aipea-market-architecture.html  aipea-market-configs.py  aipea-offline-knowledge.py  aipea-resilience-tests.py  aipea-specification.md
docs/integration/: aegis-adapter.md  agora-adapter.md
policy/: README.md  agent-egress.rego
schemas/: log_event.schema.json
src/aipea/: __init__.py  __main__.py  _types.py  analyzer.py  cli.py  config.py  engine.py  enhancer.py  errors.py  knowledge.py  learning.py  models.py  quality.py  search.py  security.py  strategies.py
src/aipea/redteam/: __init__.py  _polling.py  _resolve.py  _types.py  evaluator.py  generator.py  reporter.py
src/aipea/redteam/providers/: __init__.py  anthropic.py  ollama.py  openai_codex.py  openai_responses.py
state/: findings.md  flow.mermaid  intent.md  inventory.json
tests/: conftest.py  render_adversarial_summary.py  test_adversarial.py  test_analyzer.py  test_analyzer_enhanced.py  test_cli.py  test_config.py  test_customer_e2e.py  test_e2e.py  test_engine.py  test_enhancer.py  test_errors.py  test_knowledge.py  test_learning.py  test_learning_compliance.py  test_live.py  test_ollama.py  test_quality.py  test_redteam_b1_followup.py  test_redteam_b1_foundation.py  test_search.py  test_security.py  test_strategies.py
tests/fixtures/adversarial/: SOURCES.md  baseline.json  garak_promptinject.json  jbb_behaviors.json  owasp_llm_top10.json  promptinject.json
tools/ci/: ai_act_lint.py  ai_rmf_validate_artifacts.py  enforce_perf_gate.py  generate_precommit_config.py  generate_scorecard.py  validate_agent_messages.py  validate_log_schema.py  validate_scaffold_adoption.py  verify_fips.py
